test_regress/t/t_static_in_loop_unsup.out
%Warning-STATICVAR: t/t_static_in_loop.v:13:20: Static variable with assignment declaration declared in a loop converted to automatic
   13 |         static int a = 0;
      |                    ^
                    ... For warning description see https://verilator.org/warn/STATICVAR?v=latest
                    ... Use "/* verilator lint_off STATICVAR */" and lint_on around source to disable this message.
%Error: Exiting due to
